# logto_bridge

./: .gitignore  LICENSE  README.md  license.txt  pyproject.toml
logto_bridge/: hooks.py  modules.txt
logto_bridge/api/: auth.py
logto_bridge/auth/: jwt_verifier.py  opaque_verifier.py  user.py  validate.py
logto_bridge/logto_bridge/doctype/logto_bridge_settings/: logto_bridge_settings.json  logto_bridge_settings.py
